# qpakman

./: .gitignore  CMakeLists.txt  CMakePresets.json  arc_spec.cc  im_mip.cc  vcpkg-configuration.json  vcpkg.json
vcpkg-triplets/: vcpkg-triplets-linux.cmake  vcpkg-triplets-mac.cmake  vcpkg-triplets-windows.cmake
